--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,5 +35,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'France -- History -- Revolution, 1789-1799 -- Sources'
 - !lcc 'DC'
+- GITenberg
 title: Le carnet de Robespierre (septembre-décembre 1793)
 url: http://www.gutenberg.org/ebooks/29823
